fixed aligning of logo

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -47,6 +47,4 @@
     border-radius: 0.5rem;
     margin-left: 1rem;
     margin-right: 0.5rem;
-    vertical-align: bottom;
-    margin-bottom: 1rem;
 }
